# ss24-multi-robot-task-distribution

./: CMakeLists.txt  README.md  log.csv  package.xml  robots_log.csv  sample_task_distributor.py  shared_memory.py  task_distributor.py
TaskDistributor/: TD_Workflow.md  broker.py  client.py  sample_orders.csv  worker.py
data/: .~lock.robot_assignments.csv#  robot_assignments.csv  sample_orders.csv  shelves_details.csv
mrtd_pkg/: CMakeLists.txt
mrtd_pkg/launch/: move_base.launch  spawn_urdf.launch  warehouse.launch  world.launch
mrtd_pkg/maps/: map.pgm
mrtd_pkg/msg/: Num.msg
mrtd_pkg/param/: costmap_common_params_burger.yaml  local_costmap_params.yaml
mrtd_pkg/scripts/: goals.csv  goals.csv.ods  goals_services.py  msg_test.py  nav2goal.py  subscriber_object_and_end_effector_pose.py  tb_goal.csv  turtlebot3_goals.py  turtlebot_nav2goal.py
mrtd_pkg/urdf/: mbot_ranger.urdf
mrtd_pkg/worlds/: warehouse.world
shared_memory/: CMakeLists.txt  log.csv  package.xml  robot_status.py  robots_log.csv  shared_memory.py  shared_memory_node.py
shared_memory/data/: shelves_details.csv
shared_memory/logs/: log_2024-09-15 08:47:20.851340.csv  log_2024-09-15 18:13:03.810998.csv  log_2024-09-15 18:13:04.158594.csv  log_2024-09-15 18:13:33.430682.csv  log_2024-09-15 18:13:33.849618.csv  log_2024-09-15 18:13:57.801045.csv  log_2024-09-15 18:15:11.737646.csv  log_2024-09-15 18:15:11.944433.csv  log_2024-09-15 18:15:41.657801.csv  log_2024-09-15 18:15:41.857805.csv  log_2024-09-15 18:15:57.990421.csv  log_2024-09-15 18:15:58.168820.csv
shared_memory/msg/: ShelfGoalPose.msg  TaskResponse.msg  goal_reach_msg.msg  goal_start_msg.msg
srv/: TaskService.srv
test_scripts/: Process_output.py  goal_sender.py  goals.csv  sample_order_input.py  shared_memory.py  task_distributor.py  tb_goal.csv  tb_goal.py  turtlebot3_goals.py  worker.py
urdf/: mbot_ranger.urdf
(+17 files in other folders)
