<package>
  <name>ss24_multi_robot_task_distribution</name>
  <version>0.1.0</version>
  <description>My ROS package</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <export>
  <message_generation declare="true"/>
</export>


  <!-- Add any additional dependencies here -->
</package>

